# Financial-Driftguard

./: .env.example  .gitignore  DEMO_RUN_RESULTS.md  Dockerfile  Makefile  README.md  docker-compose.yml  driftguard.db  pyproject.toml  railway-env.example  requirements.txt
.claude/: settings.json  settings.local.json
api/routes/: alerts.py
dashboard/: .env.example  Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
dashboard/src/: App.tsx  index.css  main.tsx
dashboard/src/api/: agent-client.ts  client.ts
dashboard/src/components/: ActionCard.tsx  AgentResponseCard.tsx  AlertFeed.tsx  ApprovalQueue.tsx  DemoPanel.tsx  DriftChart.tsx  ForecastAlert.tsx  HaltOverlay.tsx  ImpactBanner.tsx  MacroPanel.tsx  ModelHealthCard.tsx  (+2 more)
demo/: Readme.md  lending_club.py
demo/data/: baseline_snapshot.parquet  feature_columns.json  lending_club_model.pkl  live_snapshot.parquet
demo/scenarios/: __init__.py  covid_crash.py  demo_full.py  normal_decay.py  rate_hike_2017.py
docs/: PROJECT_DEMO_BLUEPRINT.md  demo_script.md  project_status.md  v5_buildPlan.md  v5_execution_plan.md  v5_setup_checklist.md
docs/archive/: finsight_ai_build_plan.md
docs/versions/: v1.md  v2.md  v3.md
driftguard/: __init__.py
driftguard/adapters/: email_notifier.py
driftguard/api/: auth.py  main.py  schemas.py
driftguard/backtesting/: report.py  runner.py
driftguard/core/: drift_result.py  monitor.py  snapshot.py
driftguard/detectors/: base.py  js_divergence.py  ks_test.py  psi.py
driftguard/notifications/: __init__.py  base.py  discord.py  slack.py  telegram.py
driftguard/regime/: classifier.py  features.py  labeller.py  macro_signals.py  tagger.py
driftguard/scheduler/: jobs.py  macro_job.py
driftguard/store/: database.py  models.py
financial_driftguard.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
finsight/: __init__.py
finsight/adk/: agents.py  config.py  tools.py
finsight/agent/: __init__.py  brain.py  memory.py
finsight/challenger/: __init__.py  runner.py
finsight/evals/: governance_eval.py
finsight/forecast/: __init__.py  event_calendar.py  predictor.py
finsight/impact/: __init__.py  estimator.py  feature_metadata.py  historical_patterns.py
finsight/llm/: __init__.py  config.py  gemini_provider.py  groq_provider.py  provider.py
finsight/notifications/: approval_notifier.py  enricher.py
finsight/reports/: __init__.py  _prompt.py  digest.py  generator.py
finsight/tracing/: __init__.py  attributes.py  decorators.py  setup.py
finsight/trust_api/: __init__.py  handler.py
scripts/: build_regime_labels.py  check_connections.py  demo_full.py  run_backtest.py  run_evals.py  sanity_check.py  test_agent.py  train_regime_classifier.py
tests/: test_agent.py  test_challenger.py  test_db_blob.py  test_detectors.py  test_forecast.py  test_impact.py  test_llm_abstraction.py  test_phoenix_tools.py  test_report.py  test_tracing.py  test_trust_api.py
(+32 files in other folders)
