[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "financial-driftguard"
version = "0.1.0"
description = "ML model drift monitoring with financial regime awareness"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26.0",
    "pandas>=2.1.0",
    "scipy>=1.11.0",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "sqlmodel>=0.0.14",
    "apscheduler>=3.10.0",
    "fredapi>=0.5.1",
    "yfinance>=0.2.36",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.26.0",
]
llm = [
    "groq>=0.9.0",
]
tracing = [
    "arize-phoenix[evals]>=8.0.0",
    "openinference-instrumentation>=0.1.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp-proto-http>=1.20.0",
]
agent = [
    "httpx>=0.27.0",   # Phoenix REST API calls from the agent tools
]
reports = [
    "reportlab>=4.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["driftguard*", "finsight*"]